--- a/helm/harvester/charts/harvester/templates/configmap.yaml
+++ b/helm/harvester/charts/harvester/templates/configmap.yaml
@@ -41,6 +41,7 @@ data:
   {{- else if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpsProxy }}"
   {{- end }}
+  HARVESTER_ID: "{{ .Values.harvesterID }}"
   {{- if .Values.noRoot }}
   HARVESTER_NO_ROOT: "1"
   {{- end }}
