--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -19,6 +19,9 @@ noRoot: false
 httpProxy: ""
 httpsProxy: ""
 
+# harvester id
+harvesterID: "my-harvester"
+
 persistentvolume:
   create: false
   class: nas
