--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -1,25 +1,27 @@
 {
-    "db": {
-        "engine": "mariadb",
-        "verbose": true
-    }, 
-    "master": {
-        "gname": "zp", 
-        "harvester_id": "FROM_ENV",
-        "uname": "atlpan"
-    }, 
-    "pandacon": {
-        "ca_cert": null,
-        "auth_type": "oidc",
-        "auth_token": "FIXME",
-        "auth_origin": "FIXME",
-        "pandaURL": "http://pandaserver-doma.cern.ch:25080/server/panda",
-        "pandaURLSSL": "https://pandaserver-doma.cern.ch/server/panda", 
-        "verbose": true
-    }, 
-    "qconf": {
-        "queueList": [
-            "ALL"
-        ]
-    }
+  "db": {
+    "engine": "mariadb",
+    "useMySQLdb": true,
+    "schema": "harvester",
+    "verbose": true
+  },
+  "master": {
+    "gname": "zp",
+    "harvester_id": "FROM_ENV",
+    "uname": "atlpan"
+  },
+  "pandacon": {
+    "ca_cert": null,
+    "auth_type": "oidc",
+    "auth_token": "FIXME",
+    "auth_origin": "FIXME",
+    "pandaURL": "http://pandaserver-doma.cern.ch:25080/server/panda",
+    "pandaURLSSL": "https://pandaserver-doma.cern.ch/server/panda",
+    "verbose": true
+  },
+  "qconf": {
+    "queueList": [
+      "ALL"
+    ]
+  }
 }
