--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -43,6 +43,8 @@ panda:
   authIdToken: ""
   authVO: ""
 
+  # panda server behind real load balancer
+  behindRealLB: false
 
 
 imagePullSecrets: []
