--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -3,6 +3,7 @@
     "engine": "mariadb",
     "useMySQLdb": true,
     "schema": "harvester",
+    "host": "${HARVESTER_DB_HOST}",
     "verbose": true
   },
   "master": {
