--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -4,6 +4,7 @@
     "useMySQLdb": true,
     "schema": "harvester",
     "host": "${HARVESTER_DB_HOST}",
+    "password": "${MARIADB_PASSWORD}",
     "verbose": true
   },
   "master": {
