--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -86,7 +86,7 @@ spec:
             - name: {{ include "harvester.fullname" . }}-configjson
               mountPath: /opt/harvester/etc/configmap
             - name: {{ include "harvester.fullname" . }}-scripts
-              mountPath: /opt/harvester/etc/scripts
+              mountPath: /opt/scripts
           envFrom:
             - configMapRef:
                 {{- if .Values.database.config_ref }}
