--- a/helm/harvester/charts/harvester/templates/configmap.yaml
+++ b/helm/harvester/charts/harvester/templates/configmap.yaml
@@ -49,9 +49,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "harvester.fullname" . }}-stuff
-data:
+binaryData:
   {{- range $path, $_ := .Files.Glob "stuff/*" }}
   {{ base $path }}: |-
-    "{{ $.Files.Get $path | indent 6 }}"
+    {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
