--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -85,6 +85,8 @@ spec:
               mountPath: /var/log/panda/
             - name: {{ include "harvester.fullname" . }}-configjson
               mountPath: /opt/harvester/etc/configmap
+            - name: {{ include "harvester.fullname" . }}-queueconfig
+              mountPath: /etc/harvester/queueconfig
             - name: {{ include "harvester.fullname" . }}-stuff
               mountPath: /opt/harvester/stuff
           envFrom:
