--- a/helm/harvester/charts/harvester/templates/configmap.yaml
+++ b/helm/harvester/charts/harvester/templates/configmap.yaml
@@ -36,11 +36,13 @@ data:
   {{- end }}
   {{- if .Values.httpProxy }}
   http_proxy: "{{ .Values.httpProxy }}"
+  no_proxy: "localhost,{{ .Values.panda.host }}"
   {{- if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpProxy }}"
   {{- end }}
   {{- else if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpsProxy }}"
+  no_proxy: "localhost,{{ .Values.panda.host }}"
   {{- end }}
   HARVESTER_ID: "{{ .Values.harvesterID }}"
 ---
