--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -75,7 +75,10 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - while ! mysqladmin ping -h ${HARVESTER_DB_HOST} --silent; do sleep 1; done;
-              cp /opt/harvester/stuff/*.pem /data/harvester/;
+              cp /opt/harvester/stuff/init-harvester /data/harvester/;
+              chmod +x /data/harvester/init-harvester;
+              cp /opt/harvester/stuff/run-harvester-crons /data/harvester/;
+              chmod +x /data/harvester/run-harvester-crons;
               /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               sleep infinity & wait
           {{- end }}
