--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -79,6 +79,7 @@ spec:
               chmod +x /data/harvester/init-harvester;
               cp /opt/harvester/stuff/run-harvester-crons /data/harvester/;
               chmod +x /data/harvester/run-harvester-crons;
+              cp /opt/harvester/stuff/condor_config.local /data/harvester/;
               /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               sleep infinity & wait
           {{- end }}
