--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -16,6 +16,9 @@
     "moduleName": [],
     "pluginConfigs": []
   },
+  "payload_interaction": {
+    "jobSpecFile": "pandaJobData.out"
+  },
   "pandacon": {
     "ca_cert": false,
     "auth_type": "oidc",
