--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -15,11 +15,10 @@ kind: ConfigMap
 metadata:
     name: {{ include "server.fullname" . }}-certs
 data:
-    hostcert.pem: |-
-{{ .Files.Get "hostcert.pem" | indent 8}}
-
-    hostkey.pem: |-
-{{ .Files.Get "hostkey.pem" | indent 8}}
+  {{- range $path, $_ := .Files.Glob "cert/**.pem" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path }}
+  {{- end }}
 {{- end }}
 
 ---
