--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -14,10 +14,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: {{ include "server.fullname" . }}-certs
-data:
+binaryData:
   {{- range $path, $_ := .Files.Glob "cert/**.pem" }}
   {{ base $path }}: |-
-    {{ $.Files.Get $path }}
+    {{ $.Files.Get $path | b64enc }}
   {{- end }}
 {{- end }}
 
