--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -77,6 +77,10 @@ spec:
           command: [ "/bin/sh", "-c" ]
           args:
             - until /usr/pgsql-*/bin/pg_isready -h ${PANDA_DB_HOST} -p 5432; do echo waiting for database; sleep 2; done;
+              cp /opt/panda/sandbox/init-panda /data/panda/;
+              chmod +x /data/panda/init-panda;
+              cp /opt/panda/sandbox/run-panda-crons /data/panda/;
+              chmod +x /data/panda/run-panda-crons;
               /etc/rc.d/init.d/run-panda-services;
               sleep infinity & wait
           {{- end }}
@@ -96,6 +100,8 @@ spec:
                mountPath: /opt/panda/etc/configmap
              - name: {{ include "server.fullname" . }}-auth
                mountPath: /opt/panda/etc/panda/auth
+             - name: {{ include "server.fullname" . }}-sandbox
+               mountPath: /opt/panda/sandbox
              {{- if .Values.hostcerts.enabled }}
              - name: {{ include "server.fullname" . }}-certs
                mountPath: /opt/panda/etc/cert
@@ -134,6 +140,9 @@ spec:
         - name: {{ include "server.fullname" . }}-auth
           configMap:
               name: {{ include "server.fullname" . }}-auth
+        - name: {{ include "server.fullname" . }}-sandbox
+          configMap:
+              name: {{ include "server.fullname" . }}-sandbox
         {{- if .Values.hostcerts.enabled }}
         - name: {{ include "server.fullname" . }}-certs
           configMap:
