--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -38,7 +38,7 @@ data:
   {{- end }}
   {{- if .Values.httpProxy }}
   http_proxy: "{{ .Values.httpProxy }}"
-  no_proxy: "localhost,{{ include "server.fullname" . }},http-{{ include "server.fullname" . }}"
+  no_proxy: "localhost,{{ include "server.fullname" . }}"
   {{- if .Values.httpsProxy }}
   https_proxy: "{{ .Values.httpProxy }}"
   {{- end }}
