--- a/helm/panda/charts/server/panda_server_configmap.json
+++ b/helm/panda/charts/server/panda_server_configmap.json
@@ -8,7 +8,7 @@
         "adder_plugins": "wlcg:dataservice.AdderDummyPlugin:AdderDummyPlugin", 
         "backend": "postgres",
         "configurator_use_cert": "False",
-        "production_dns": "iddssv",
+        "production_dns": "iddssv1",
         "pserveralias": "FIXME: a common name of httpd",
         "setupper_plugins": "wlcg:dataservice.SetupperDummyPlugin:SetupperDummyPlugin", 
         "token_authType": "oidc"
