--- a/helm/panda/charts/jedi/templates/configmap.yaml
+++ b/helm/panda/charts/jedi/templates/configmap.yaml
@@ -6,3 +6,15 @@ metadata:
 data:
   panda_jedi_configmap.json: |-
 {{ .Files.Get "panda_jedi_configmap.json" | indent 4}}
+
+---
+# sandbox
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "jedi.fullname" . }}-sandbox
+binaryData:
+  {{- range $path, $_ := .Files.Glob "sandbox/*" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path | b64enc }}
+  {{- end }}
