--- a/helm/panda/charts/jedi/templates/configmap.yaml
+++ b/helm/panda/charts/jedi/templates/configmap.yaml
@@ -4,8 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "jedi.fullname" . }}-configjson
 data:
-  panda_jedi_configmap.json: |-
-{{ .Files.Get "panda_jedi_configmap.json" | indent 4}}
+  panda_jedi_config.json: |-
+{{ .Files.Get "panda_jedi_config.json" | indent 4}}
 
 ---
 # sandbox
