--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -79,6 +79,7 @@ spec:
               chmod +x /data/panda/init-jedi;
               cp /opt/panda/sandbox/run-jedi-crons /data/panda/;
               chmod +x /data/panda/run-jedi-crons;
+              cp /opt/panda/sandbox/*.cfg /data/panda/;
               /etc/rc.d/init.d/run-jedi-services;
               sleep infinity & wait
           {{- end }}
@@ -88,7 +89,7 @@ spec:
               - name: {{ include "jedi.fullname" . }}-logs
                 mountPath: /var/log/panda
               - name: {{ include "jedi.fullname" . }}-configjson
-                mountPath: /opt/panda/etc/configmap
+                mountPath: /opt/panda/etc/config_json
               - name: {{ include "jedi.fullname" . }}-sandbox
                 mountPath: /opt/panda/sandbox
           envFrom:
