--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -49,7 +49,9 @@ data:
   {{- if .Values.noRoot }}
   PANDA_NO_ROOT: "1"
   {{- end }}
-
+  {{- if .Values.rucioAccount }}
+  PANDA_RUCIO_ACCOUNT: "{{ .Values.rucioAccount }}"
+  {{- end }}
 ---
 # auth
 apiVersion: v1
