--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -8,7 +8,7 @@
         "adder_plugins": "wlcg:dataservice.AdderDummyPlugin:AdderDummyPlugin", 
         "backend": "postgres",
         "schemaPANDA": "doma_panda",
-        "schemaPANDAMETA": "doma_pandameta",
+        "schemaMETA": "doma_pandameta",
         "configurator_use_cert": "False",
         "production_dns": "iddssv1",
         "pserveralias": "FIXME: a common name of httpd",
