--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -41,7 +41,7 @@ panda:
   authVO: ""
 
   # panda server behind real load balancer
-  behindRealLB: false
+  behindRealLB: true
 
 
 imagePullSecrets: []
