--- a/helm/panda/values.yaml
+++ b/helm/panda/values.yaml
@@ -20,9 +20,22 @@ server:
     enabled: true
   # use Route class for ingress
   route:
-    enabled: true
+    enabled: false
     # host name of the PanDA server
     hostName: "FIXME"
+  ingress:
+    enabled: true
+    hosts:
+      - domain: cern.ch
+        # hostOverride: panda-k8s-dev-jedi.cern.ch
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: panda-k8s-dev-jedi-tls-cert
+        hosts:
+          - domain: cern.ch
+            # hostOverride: panda-k8s-dev-jedi.cern.ch
   # ID token of the PanDA service account
   authIdToken: "FIXME"
   # VO (+ role)
